--- a/samples/aloha/Makefile.vc
+++ b/samples/aloha/Makefile.vc
@@ -69,14 +69,14 @@ $(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
 
 subdirs: $(SUBDIR_TARGETS)
 
-network_n.obj: network_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp network_n.cc
+network_n.obj: network_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp network_n.cpp
 
-network_n.cc: network.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) network.ned
+network_n.cpp: network.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) network.ned
 
-aloha.obj: aloha.cc
-	$(CXX) -c $(COPTS) /Tp aloha.cc
+aloha.obj: aloha.cpp
+	$(CXX) -c $(COPTS) /Tp aloha.cpp
 
 
 #doc: neddoc doxy
@@ -88,12 +88,12 @@ aloha.obj: aloha.cc
 #	@doxygen doxy.cfg
 
 clean:
-	-del *.obj *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
+	-del *.obj *_n.cpp *_n.h *_m.cpp *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
 	-del *.vec *.sca 2>NUL
 	-for %%i in ( $(SUBDIRS) ) do cd %%i && nmake /nologo /f Makefile.vc clean && cd ..
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cpp
 
 re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
