--- a/samples/fifo/Makefile.vc
+++ b/samples/fifo/Makefile.vc
@@ -69,38 +69,38 @@ $(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
 
 subdirs: $(SUBDIR_TARGETS)
 
-fifo_n.obj: fifo_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp fifo_n.cc
+fifo_n.obj: fifo_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp fifo_n.cpp
 
-fifo_n.cc: fifo.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) fifo.ned
+fifo_n.cpp: fifo.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) fifo.ned
 
-fifonet_n.obj: fifonet_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp fifonet_n.cc
+fifonet_n.obj: fifonet_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp fifonet_n.cpp
 
-fifonet_n.cc: fifonet.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) fifonet.ned
+fifonet_n.cpp: fifonet.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) fifonet.ned
 
-gen_n.obj: gen_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp gen_n.cc
+gen_n.obj: gen_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp gen_n.cpp
 
-gen_n.cc: gen.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) gen.ned
+gen_n.cpp: gen.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) gen.ned
 
-sink_n.obj: sink_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp sink_n.cc
+sink_n.obj: sink_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp sink_n.cpp
 
-sink_n.cc: sink.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) sink.ned
+sink_n.cpp: sink.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) sink.ned
 
-fifo.obj: fifo.cc
-	$(CXX) -c $(COPTS) /Tp fifo.cc
+fifo.obj: fifo.cpp
+	$(CXX) -c $(COPTS) /Tp fifo.cpp
 
-gen.obj: gen.cc
-	$(CXX) -c $(COPTS) /Tp gen.cc
+gen.obj: gen.cpp
+	$(CXX) -c $(COPTS) /Tp gen.cpp
 
-sink.obj: sink.cc
-	$(CXX) -c $(COPTS) /Tp sink.cc
+sink.obj: sink.cpp
+	$(CXX) -c $(COPTS) /Tp sink.cpp
 
 
 #doc: neddoc doxy
@@ -112,12 +112,12 @@ sink.obj: sink.cc
 #	@doxygen doxy.cfg
 
 clean:
-	-del *.obj *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
+	-del *.obj *_n.cpp *_n.h *_m.cpp *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
 	-del *.vec *.sca 2>NUL
 	-for %%i in ( $(SUBDIRS) ) do cd %%i && nmake /nologo /f Makefile.vc clean && cd ..
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cpp
 
 re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
