--- a/samples/hist/Makefile.vc
+++ b/samples/hist/Makefile.vc
@@ -69,14 +69,14 @@ $(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
 
 subdirs: $(SUBDIR_TARGETS)
 
-hist_n.obj: hist_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp hist_n.cc
+hist_n.obj: hist_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp hist_n.cpp
 
-hist_n.cc: hist.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) hist.ned
+hist_n.cpp: hist.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) hist.ned
 
-hist.obj: hist.cc
-	$(CXX) -c $(COPTS) /Tp hist.cc
+hist.obj: hist.cpp
+	$(CXX) -c $(COPTS) /Tp hist.cpp
 
 
 #doc: neddoc doxy
@@ -88,12 +88,12 @@ hist.obj: hist.cc
 #	@doxygen doxy.cfg
 
 clean:
-	-del *.obj *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
+	-del *.obj *_n.cpp *_n.h *_m.cpp *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
 	-del *.vec *.sca 2>NUL
 	-for %%i in ( $(SUBDIRS) ) do cd %%i && nmake /nologo /f Makefile.vc clean && cd ..
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cpp
 
 re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
