--- a/samples/tictoc/Makefile.vc
+++ b/samples/tictoc/Makefile.vc
@@ -69,53 +69,53 @@ $(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
 
 subdirs: $(SUBDIR_TARGETS)
 
-tictoc10_n.obj: tictoc10_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp tictoc10_n.cc
+tictoc10_n.obj: tictoc10_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc10_n.cpp
 
-tictoc10_n.cc: tictoc10.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) tictoc10.ned
+tictoc10_n.cpp: tictoc10.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc10.ned
 
-tictoc11_n.obj: tictoc11_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp tictoc11_n.cc
+tictoc11_n.obj: tictoc11_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc11_n.cpp
 
-tictoc11_n.cc: tictoc11.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) tictoc11.ned
+tictoc11_n.cpp: tictoc11.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc11.ned
 
-tictoc8_n.obj: tictoc8_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp tictoc8_n.cc
+tictoc8_n.obj: tictoc8_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc8_n.cpp
 
-tictoc8_n.cc: tictoc8.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) tictoc8.ned
+tictoc8_n.cpp: tictoc8.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc8.ned
 
-tictoc9_n.obj: tictoc9_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp tictoc9_n.cc
+tictoc9_n.obj: tictoc9_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc9_n.cpp
 
-tictoc9_n.cc: tictoc9.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) tictoc9.ned
+tictoc9_n.cpp: tictoc9.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc9.ned
 
-tictoc10_m.obj: tictoc10_m.cc
-	$(CXX) -c $(NEDCOPTS) /Tp tictoc10_m.cc
+tictoc10_m.obj: tictoc10_m.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc10_m.cpp
 
-tictoc10_m.cc tictoc10_m.h: tictoc10.msg
-	$(MSGC:/=\) -s _m.cc $(INCLUDE_PATH) tictoc10.msg
+tictoc10_m.cpp tictoc10_m.h: tictoc10.msg
+	$(MSGC:/=\) -s _m.cpp $(INCLUDE_PATH) tictoc10.msg
 
-tictoc11_m.obj: tictoc11_m.cc
-	$(CXX) -c $(NEDCOPTS) /Tp tictoc11_m.cc
+tictoc11_m.obj: tictoc11_m.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc11_m.cpp
 
-tictoc11_m.cc tictoc11_m.h: tictoc11.msg
-	$(MSGC:/=\) -s _m.cc $(INCLUDE_PATH) tictoc11.msg
+tictoc11_m.cpp tictoc11_m.h: tictoc11.msg
+	$(MSGC:/=\) -s _m.cpp $(INCLUDE_PATH) tictoc11.msg
 
-txc10.obj: txc10.cc
-	$(CXX) -c $(COPTS) /Tp txc10.cc
+txc10.obj: txc10.cpp
+	$(CXX) -c $(COPTS) /Tp txc10.cpp
 
-txc11.obj: txc11.cc
-	$(CXX) -c $(COPTS) /Tp txc11.cc
+txc11.obj: txc11.cpp
+	$(CXX) -c $(COPTS) /Tp txc11.cpp
 
-txc8.obj: txc8.cc
-	$(CXX) -c $(COPTS) /Tp txc8.cc
+txc8.obj: txc8.cpp
+	$(CXX) -c $(COPTS) /Tp txc8.cpp
 
-txc9.obj: txc9.cc
-	$(CXX) -c $(COPTS) /Tp txc9.cc
+txc9.obj: txc9.cpp
+	$(CXX) -c $(COPTS) /Tp txc9.cpp
 
 
 #doc: neddoc doxy
@@ -127,12 +127,12 @@ txc9.obj: txc9.cc
 #	@doxygen doxy.cfg
 
 clean:
-	-del *.obj *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
+	-del *.obj *_n.cpp *_n.h *_m.cpp *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
 	-del *.vec *.sca 2>NUL
 	-for %%i in ( $(SUBDIRS) ) do cd %%i && nmake /nologo /f Makefile.vc clean && cd ..
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cpp
 
 re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
