*** empty log message ***

--- a/samples/routing/networks/omnetpp.ini
+++ b/samples/routing/networks/omnetpp.ini
@@ -1,8 +1,18 @@
 #
-# This omnetpp.ini should be used with the "routing" program in the parent
-# directory. Starting it from this directory should do the trick:
+# If OMNeT++ was compiled with support for dynamic loading of NED files 
+# (WITH_NETBUILDER option), you can test routing on any topology without
+# nedc or C++ compilation. Some NED files are already provided here.
+#
+# You just need to start the "routing" program (../routing) with this place
+# as working directory. Typing
 #
 # ../routing   (or ..\routing.exe)
+#
+# will the trick. Then select the network in the dialog Tkenv offers at 
+# startup. (Or you can create [Run 1], [Run 2] etc. sections in the usual way.)
+#
+# If you write a new NED file, you'll need to add it to "preload-ned-files" 
+# below!
 #
 
 [General]
