--- a/samples/tictoc/Makefile.vc
+++ b/samples/tictoc/Makefile.vc
@@ -55,7 +55,7 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 # object files in this directory
-OBJS= tictoc10_n.obj tictoc11_n.obj tictoc8_n.obj tictoc9_n.obj tictoc10_m.obj tictoc11_m.obj       txc10.obj txc11.obj txc8.obj txc9.obj
+OBJS= tictoc1_n.obj tictoc10_n.obj tictoc11_n.obj tictoc2_n.obj tictoc3_n.obj tictoc4_n.obj tictoc6_n.obj tictoc7_n.obj tictoc8_n.obj tictoc9_n.obj tictoc10_m.obj tictoc11_m.obj       txc1.obj txc10.obj txc11.obj txc3.obj txc4.obj txc5.obj txc6.obj txc7.obj txc8.obj txc9.obj
 
 # subdirectories to recurse into
 SUBDIRS= 
@@ -69,6 +69,12 @@ $(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
 
 subdirs: $(SUBDIR_TARGETS)
 
+tictoc1_n.obj: tictoc1_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc1_n.cpp
+
+tictoc1_n.cpp: tictoc1.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc1.ned
+
 tictoc10_n.obj: tictoc10_n.cpp
 	$(CXX) -c $(NEDCOPTS) /Tp tictoc10_n.cpp
 
@@ -80,6 +86,36 @@ tictoc11_n.obj: tictoc11_n.cpp
 
 tictoc11_n.cpp: tictoc11.ned
 	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc11.ned
+
+tictoc2_n.obj: tictoc2_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc2_n.cpp
+
+tictoc2_n.cpp: tictoc2.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc2.ned
+
+tictoc3_n.obj: tictoc3_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc3_n.cpp
+
+tictoc3_n.cpp: tictoc3.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc3.ned
+
+tictoc4_n.obj: tictoc4_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc4_n.cpp
+
+tictoc4_n.cpp: tictoc4.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc4.ned
+
+tictoc6_n.obj: tictoc6_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc6_n.cpp
+
+tictoc6_n.cpp: tictoc6.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc6.ned
+
+tictoc7_n.obj: tictoc7_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp tictoc7_n.cpp
+
+tictoc7_n.cpp: tictoc7.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) tictoc7.ned
 
 tictoc8_n.obj: tictoc8_n.cpp
 	$(CXX) -c $(NEDCOPTS) /Tp tictoc8_n.cpp
@@ -105,11 +141,29 @@ tictoc11_m.obj: tictoc11_m.cpp
 tictoc11_m.cpp tictoc11_m.h: tictoc11.msg
 	$(MSGC:/=\) -s _m.cpp $(INCLUDE_PATH) tictoc11.msg
 
+txc1.obj: txc1.cpp
+	$(CXX) -c $(COPTS) /Tp txc1.cpp
+
 txc10.obj: txc10.cpp
 	$(CXX) -c $(COPTS) /Tp txc10.cpp
 
 txc11.obj: txc11.cpp
 	$(CXX) -c $(COPTS) /Tp txc11.cpp
+
+txc3.obj: txc3.cpp
+	$(CXX) -c $(COPTS) /Tp txc3.cpp
+
+txc4.obj: txc4.cpp
+	$(CXX) -c $(COPTS) /Tp txc4.cpp
+
+txc5.obj: txc5.cpp
+	$(CXX) -c $(COPTS) /Tp txc5.cpp
+
+txc6.obj: txc6.cpp
+	$(CXX) -c $(COPTS) /Tp txc6.cpp
+
+txc7.obj: txc7.cpp
+	$(CXX) -c $(COPTS) /Tp txc7.cpp
 
 txc8.obj: txc8.cpp
 	$(CXX) -c $(COPTS) /Tp txc8.cpp
