--- a/Makefile.in
+++ b/Makefile.in
@@ -194,7 +194,7 @@ depend: utils
 
 makefiles:
 	for i in $(SAMPLES); do \
-	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && opp_makemake -f); \
+	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && (opp_makemake -f; opp_makemake -f -m)); \
 	done
-	cd $(OMNETPP_TUTORIAL_DIR)/queues && opp_makemake -f
+	cd $(OMNETPP_TUTORIAL_DIR)/queues && (opp_makemake -f; opp_makemake -f -m)
 
