--- a/samples/fddi/Makefile.in
+++ b/samples/fddi/Makefile.in
@@ -12,26 +12,22 @@ TARGET = fddi
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
-# uncomment 1 of the 3 lines to support either serial or parallel operation
-KERNEL_LIBS=$(STD_KERNEL_LIBS)
-# KERNEL_LIBS=$(PVM_KERNEL_LIBS)
-# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
-
 # .ned or .h include paths with -I
 INCLUDE_PATH=
 
 # misc additional object and library files to link
-EXRA_OBJS=
+EXTRA_OBJS=
 
-# object files in subdirectories
-SUBDIR_OBJS=
+# object files from other directories to link with
+EXT_DIR_OBJS=
 
-# Additional libraries (-l option)
+# Additional libraries (-L option -l option)
 LIBS=
 
 #------------------------------------------------------------------------------
 
 NEDC=@NEDC@
+MSGC=@MSGC@
 CXX=@CXX@
 CC=@CC@
 AR=@AR@
@@ -39,16 +35,19 @@ SHLIB_LD=@SHLIB_LD@
 MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
 NEDCFLAGS=@NEDCFLAGS@
+LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+
+WITH_PARSIM=@WITH_PARSIM@
+WITH_NETBUILDER=@WITH_NETBUILDER@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
 TK_LIBS=@TK_LIBS@
 MPI_LIBS=@MPI_LIBS@
-PVM_LIBS=@PVM_LIBS@
+XML_LIBS=@XML_LIBS@
 SYS_LIBS=@SYS_LIBS@
 SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
 
@@ -57,9 +56,15 @@ CMDENV_LIBS=-lenvir -lcmdenv
 TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
-STD_KERNEL_LIBS=-lsim_std
-MPI_KERNEL_LIBS=-lsim_mpi $(MPI_LIBS)
-PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
+KERNEL_LIBS=-lsim_std
+
+ifeq ($(WITH_NETBUILDER),yes)
+KERNEL_LIBS += -lnedxml $(XML_LIBS)
+endif
+
+ifeq ($(WITH_PARSIM),yes)
+KERNEL_LIBS += $(MPI_LIBS)
+endif
 
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
@@ -69,14 +74,23 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 
-# Object files from this directory to link
-OBJS= fddi_mac_n.o fddi_nets_n.o fddi_nodes_n.o fddi_rings_n.o othermod_n.o ssm_ifs_n.o fddi_mac.o othermod.o ssm_ifs.o
+# subdirectories to recurse into
+SUBDIRS= 
 
-$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile 
-	$(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+# object files in this directory
+OBJS= fddi_mac_n.o fddi_nets_n.o fddi_nodes_n.o fddi_rings_n.o othermod_n.o ssm_ifs_n.o  fddi_mac.o othermod.o ssm_ifs.o
 
-purify: $(OBJS) $(EXRA_OBJS)   Makefile
-	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+#------------------------------------------------------------------------------
+
+$(TARGET): $(OBJS) $(EXTRA_OBJS) Makefile
+	$(CXX) $(LDFLAGS) $(OBJS) $(EXTRA_OBJS) $(EXT_DIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+
+purify: $(OBJS) $(EXTRA_OBJS) Makefile
+	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXTRA_OBJS) $(EXT_DIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+
+.PHONY: subdirs $(SUBDIRS)
+
+subdirs: $(SUBDIRS)
 
 fddi_mac_n.o: fddi_mac_n.cc
 	$(CXX) -c $(NEDCOPTS) fddi_mac_n.cc
@@ -123,19 +137,30 @@ othermod.o: othermod.cc
 ssm_ifs.o: ssm_ifs.cc
 	$(CXX) -c $(COPTS) ssm_ifs.cc
 
+
+#doc: neddoc doxy
+
+#neddoc:
+#	opp_neddoc -a
+
+#doxy: doxy.cfg
+#	doxygen doxy.cfg
+
 clean:
-	rm -f *.o *_n.cc $(TARGET)$(EXE_SUFFIX)
+	rm -f *.o *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX)
 	rm -f *.vec *.sca
+	for i in $(SUBDIRS); do (cd $$i && $(MAKE) clean); done
 
 depend:
 	$(MAKEDEPEND) $(INCLUDE_PATH) -- *.cc
-	$(MAKEDEPEND) $(INCLUDE_PATH) -fMakefile.in -- *.cc
+	# $(MAKEDEPEND) $(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f    #recreate Makefile
 
 re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
+
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 fddi_mac.o: fddi_mac.cc \
