--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -14,6 +14,7 @@ COPTS=$(CFLAGS)
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 
 all: seedtool tcl2c
+	chmod +x opp_makemake opp_test opp_makedep opp_neddoc splitvec
 	cp opp_makemake $(OMNETPP_BIN_DIR)
 	cp opp_test $(OMNETPP_BIN_DIR)
 	cp opp_makedep $(OMNETPP_BIN_DIR)
