--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -36,7 +36,7 @@ CPPOBJS= $(CPPOBJS_STD)
 
 !if "$(WITH_NETBUILDER)"=="yes"
 CPPOBJS= $(CPPOBJS) $(CPPOBJS_NETBUILDER)
-COPTS= $(COPTS) /DWITH_NETBUILDER /I "$(OMNETPP_SRC_DIR)/nedxml"
+COPTS= $(COPTS) /DWITH_NETBUILDER /I ../nedxml
 !endif
 
 !if "$(WITH_PARSIM)"=="yes"
