--- a/src/nedxml/Makefile.vc
+++ b/src/nedxml/Makefile.vc
@@ -32,7 +32,7 @@ OBJS= nedelements.obj nedelement.obj nederror.obj \
 #
 all : nedxml.lib
 
-nedxml.lib : $(OBJS)
+nedxml.lib : unistd.h $(OBJS)
         $(AR) /nologo /out:nedxml.lib $(OBJS)
 	copy nedxml.lib $(OMNETPP_LIB_DIR:/=\)
 
@@ -48,6 +48,9 @@ lex.yy.cc: ned.lex
         $(LEX:/=\) ned.lex
         copy lex.yy.c lex.yy.cc
         del lex.yy.c
+
+unistd.h: 
+	echo > unistd.h
 
 saxparser_expat.obj : saxparser_expat.cc
         $(CXX) $(COPTS) /I $(EXPAT_INCL_DIR) /c /Tp saxparser_expat.cc
